[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["Roberto Bechara <roberto.bechara@gmail.com>"]

packages = [
    { include="src" },
]

[tool.poetry.scripts]
run-script = 'src.api:main'

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
black = "22.3.0"

[tool.black]
line-length = 100
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

